--- a/PingTest/packages.config
+++ b/PingTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.21.1" targetFramework="net40" />
+  <package id="NewRelic.Azure.WebSites" version="3.10.43.0" targetFramework="net40" />
 </packages>
